--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.12.3",
     "parcel-bundler": "^1.12.4",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5"
   },
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-node": "0.0.1-security",
+    "@babel/node": "^7.12.6",
+    "@reach/router": "^1.3.4",
     "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
