--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.3",
-    "parcel-bundler": "^1.12.4",
-    "prettier": "^2.1.2",
     "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5"
+    "@babel/preset-react": "^7.12.5",
+    "babel-plugin-styled-components": "^1.11.1",
+    "parcel-bundler": "^1.12.4",
+    "prettier": "^2.1.2"
   },
   "dependencies": {
     "@babel/node": "^7.12.6",
     "@reach/router": "^1.3.4",
     "express": "^4.17.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
   }
 }
